Renamed userRouter to authRouter and made dependent changes
